# tug2notion

./: README.md  pyproject.toml
src/: main.py
src/notion/: client.py
src/tug/: data.py
